--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "@graphql-tools/merge": "^9.0.0",
     "@graphql-tools/schema": "^10.0.0",
     "apollo-server": "^3.12.0",
-    "graphql": "^16.7.1"
+    "graphql": "^16.7.1",
+    "knex": "^2.4.2",
+    "pg": "^8.11.1"
   }
 }
